--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,13 +1,18 @@
-.content_wrapper .owl-carousel img {
+.content_wrapper .carousel-section.owl-carousel img {
     height: 40em;
     width: 100%;
 }
 
-.content_wrapper .owl-carousel .owl-nav {
+.content_wrapper .carousel-section.owl-carousel .owl-nav {
     bottom: 50%;
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 0;
+    margin: 0;
 }
 
-.content_wrapper .owl-carousel .owl-nav button {
+.content_wrapper .carousel-section.owl-carousel .owl-nav button {
     outline: none;
     height: 5em;
     background: rgba(0, 0, 0, .5);
@@ -15,56 +20,61 @@
     border: none;
 }
 
-.content_wrapper .owl-carousel .owl-nav button span {
+.content_wrapper .carousel-section.owl-carousel .owl-nav button span {
     font-size: 44px;
     padding: 0em 0.3em;
 }
 
-.content_wrapper .owl-carousel .owl-nav button.owl-prev,
-.content_wrapper .owl-carousel .owl-nav button.owl-next {
+.content_wrapper .carousel-section.owl-carousel .owl-nav button.owl-prev,
+.content_wrapper.carousel-section.owl-carousel .owl-nav button.owl-next {
     background: rgba(0, 0, 0, .5);
     color: white;
     border-radius: 0px;
     margin: 0px;
 }
 
-.content_wrapper .owl-carousel .owl-nav button.owl-next {
-    left: 95.7vw;
-    position: absolute;
+.content_wrapper .carousel-section.owl-carousel .owl-nav button.owl-prev {
+    float: left;
 }
 
-.content_wrapper .owl-carousel .item .carousel-caption {
+.content_wrapper .carousel-section.owl-carousel .owl-nav button.owl-next {
+    float: right;
+    border-radius: 0px;
+    margin: 0;
+}
+
+.content_wrapper .carousel-section.owl-carousel .item .carousel-caption {
     text-align: left;
     left: 6em;
     top: 20%;
 }
 
-.content_wrapper .owl-carousel .item .carousel-caption h1 {
+.content_wrapper .carousel-section.owl-carousel .item .carousel-caption h1 {
     font-size: 3.5em;
     color: red;
     font-weight: 600;
     font-family: Roboto;
 }
 
-.content_wrapper .owl-carousel .item:first-child .carousel-caption p:nth-child(2) {
+.content_wrapper .carousel-section.owl-carousel .item:first-child .carousel-caption p:nth-child(2) {
     font-size: 30px;
     color: currentcolor;
     font-weight: 600;
     font-family: Poppins;
 }
 
-.content_wrapper .owl-carousel .item:first-child .carousel-caption p:nth-child(3) {
+.content_wrapper .carousel-section.owl-carousel .item:first-child .carousel-caption p:nth-child(3) {
     font-size: 25px;
     color: antiquewhite;
     font-family: 'times new roman';
 }
 
-.content_wrapper .owl-carousel .item:first-child .carousel-caption p:nth-child(3) .price {
+.content_wrapper .carousel-section.carousel-section.owl-carousel .item:first-child .carousel-caption p:nth-child(3) .price {
     color: red;
     font-weight: 700;
 }
 
-.content_wrapper .owl-carousel .item .carousel-caption a:last-child {
+.content_wrapper .carousel-section.owl-carousel .item .carousel-caption a:last-child {
     background: red;
     padding: 0.5em 2em;
     display: inline-block;
@@ -73,24 +83,24 @@
     visibility: visible;
 }
 
-.content_wrapper .owl-carousel .item:nth-child(2) .carousel-caption p:nth-child(2) {
+.content_wrapper .carousel-section.owl-carousel .item:nth-child(2) .carousel-caption p:nth-child(2) {
     color: black;
 }
 
-.content_wrapper .owl-carousel .item:nth-child(2) .carousel-caption p:nth-child(3) {
+.content_wrapper .carousel-section.owl-carousel .item:nth-child(2) .carousel-caption p:nth-child(3) {
     color: #125b2f;
 }
 
-.content_wrapper .owl-carousel .item:last-child .carousel-caption p:nth-child(2) {
+.content_wrapper .carousel-section.owl-carousel .item:last-child .carousel-caption p:nth-child(2) {
     color: darkturquoise;
 }
 
-.content_wrapper .owl-carousel .item .carousel-caption a:last-child:hover {
+.content_wrapper .carousel-section.owl-carousel .item .carousel-caption a:last-child:hover {
     text-decoration: none;
     color: white;
 }
 
-.content_wrapper .owl-carousel .item:nth-child(2) .carousel-caption h1 {
+.content_wrapper .carousel-section.owl-carousel .item:nth-child(2) .carousel-caption h1 {
     font-size: 3em;
     color: cadetblue;
     font-weight: 600;
@@ -239,13 +249,15 @@
     border-right: 1px solid #e6e6e6;
 }
 
-.owl-theme .owl-nav {
+
+/* .owl-theme .owl-nav {
     margin: 0px;
     position: absolute;
     bottom: 5em;
-}
+} */
 
-.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next,
+
+/* .content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next,
 .content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-prev {
     position: relative;
     font-size: 40px;
@@ -280,7 +292,7 @@
 .content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next:hover {
     color: white;
     background: #696969;
-}
+} */
 
 
 /* .prev-slick,
@@ -342,8 +354,49 @@
     color: white;
 } */
 
-.owl-carousel.owl-loaded:not(.active) {
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel.owl-loaded:not(.active) {
     display: none;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav {
+    position: absolute;
+    bottom: 70%;
+    width: 100%;
+    height: 0;
+    margin: 0;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next,
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-prev {
+    margin: 0;
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next {
+    float: right;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-prev {
+    float: left;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next span,
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-prev span {
+    padding: 0.1em 0.2em;
+    font-size: 40px;
+    background: #afafaf;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel:hover .owl-nav button.owl-next,
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel:hover .owl-nav button.owl-prev {
+    opacity: 1;
+}
+
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-next:hover,
+.content_wrapper .product_category .category_body .container .content .tab-content .owl-carousel .owl-nav button.owl-prev:hover {
+    background: rgba(0, 0, 0, .5);
+    color: white;
 }
 
 .content_wrapper .product_category .category_body .container .content .tab-content {
@@ -380,19 +433,17 @@
 }
 
 @media screen and (max-width:425px) {
-    .content_wrapper .owl-carousel .item img {
+    .content_wrapper .carousel-section.owl-carousel .item img {
         height: 30em;
     }
-    .content_wrapper .owl-carousel .item .carousel-caption h1 {
-        font-size: 2em
+    .content_wrapper .carousel-section.owl-carousel .item .carousel-caption {
+        top: 5%;
     }
-    .content_wrapper .owl-carousel .item .carousel-caption p:nth-child(2),
-    .content_wrapper .owl-carousel .ite .carousel-caption p:nth-child(3) {
-        font-size: 18px;
+    .content_wrapper .carousel-section.owl-carousel .item .carousel-caption h1 {
+        font-size: 1.7em
     }
-}
-
-
-}
-
+    .content_wrapper .carousel-section.owl-carousel .item:first-child .carousel-caption p:nth-child(2),
+    .content_wrapper .carousel-section.owl-carousel .item .carousel-caption p:nth-child(3) {
+        font-size: 20px;
+    }
 }
