--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -139,6 +139,16 @@
     font-family: 'Poppins';
 }
 
+.img_wrapper .container .row figure {
+    position: relative;
+    margin-top: 2em;
+}
+
+.img_wrapper .container .row figure img {
+    width: 100%;
+    height: 18em;
+}
+
 
 /* product category */
 
@@ -164,7 +174,9 @@
 }
 
 .content_wrapper .product_category .category_intro .intro_body figure::after,
-.content_wrapper .product_category .category_intro .intro_body figure::before {
+.content_wrapper .product_category .category_intro .intro_body figure::before,
+.img_wrapper .container .row figure::before,
+.img_wrapper .container .row figure::after {
     content: '';
     position: absolute;
     background: rgba(255, 255, 255, 0.2);
@@ -173,14 +185,17 @@
     transition: all 0.5s ease-out;
 }
 
-.content_wrapper .product_category .category_intro .intro_body figure::after {
+.content_wrapper .product_category .category_intro .intro_body figure::after,
+.img_wrapper .container .row figure::after {
     transition: rotate(180deg);
     top: 0em;
     right: 0em;
 }
 
 .content_wrapper .product_category .category_intro .intro_body:hover figure::before,
-.content_wrapper .product_category .category_intro .intro_body:hover figure::after {
+.content_wrapper .product_category .category_intro .intro_body:hover figure::after,
+.img_wrapper .container .row figure:hover::before,
+.img_wrapper .container .row figure:hover::after {
     width: 50%;
 }
 
@@ -372,6 +387,25 @@
     color: rgba(255, 230, 0, 0.747);
 }
 
+.content_wrapper .product_category .container .row .slick_container {
+    border: 1px solid #0322485e;
+    padding: 0.3em;
+    margin-bottom: 2em;
+}
+
+.content_wrapper .product_category .container .row .slick_container .item.shadow.slick-slide {
+    margin: 0em 1em;
+    width: 250px;
+}
+
+.content_wrapper .product_category .container .row .slick_container .item.shadow.slick-slide a {
+    transition: all 1s ease-oout;
+}
+
+.content_wrapper .product_category .container .row .slick_container .item.shadow.slick-slide a:hover {
+    transform: scale(1.1);
+}
+
 @media screen and (max-width:1024px) {
     .content_wrapper .product_category .category_intro .intro_body figure .text p:first-child {
         font-size: 3em
@@ -418,6 +452,10 @@ font-size: 20px;
 
 }
 font-size: 20px;
+
+}
+
+}
 
 }
 
