--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -393,16 +393,33 @@
     margin-bottom: 2em;
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.shadow.slick-slide {
-    margin: 0em 1em;
+.content_wrapper .product_category .container .row .slick_container .item.slick-slide {
+    margin: 0em 0.5em;
     width: 250px;
+    display: flex;
+    justify-content: center;
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.shadow.slick-slide a {
-    transition: all 1s ease-oout;
+.content_wrapper .product_category .container .row .slick_container .item.slick-slide a {
+    transition: all 0.6s ease-out;
+    display: inline-block;
+    width: 220px;
+    margin: 0.4em;
+    transform: scale(0.95);
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.shadow.slick-slide a:hover {
+.content_wrapper .product_category .container .row .slick_container .item.slick-slide a p {
+    font-family: 'Poppins';
+    font-size: 12px;
+    padding: 0.4em;
+}
+
+.content_wrapper .product_category .container .row .slick_container .item.slick-slide:not(.slick-active.slick-center) a:hover {
+    transform: scale(1.0);
+    color: #0322485e;
+}
+
+.content_wrapper .product_category .container .row .slick_container .item.slick-slide.slick-active.slick-center {
     transform: scale(1.1);
 }
 
