--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -387,20 +387,19 @@
     color: rgba(255, 230, 0, 0.747);
 }
 
-.content_wrapper .product_category .container .row .slick_container {
-    border: 1px solid #0322485e;
-    padding: 0.3em;
+.content_wrapper .product_category .container .slick_container {
     margin-bottom: 2em;
+    padding: 2em;
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.slick-slide {
+.content_wrapper .product_category .container .slick_container .item.slick-slide {
     margin: 0em 0.5em;
     width: 250px;
     display: flex;
     justify-content: center;
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.slick-slide a {
+.content_wrapper .product_category .container .slick_container .item.slick-slide a {
     transition: all 0.6s ease-out;
     display: inline-block;
     width: 220px;
@@ -408,19 +407,42 @@
     transform: scale(0.95);
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.slick-slide a p {
-    font-family: 'Poppins';
-    font-size: 12px;
-    padding: 0.4em;
+.content_wrapper .product_category .container .slick_container .item.slick-slide a img {
+    width: 100%;
+    height: 14em;
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.slick-slide:not(.slick-active.slick-center) a:hover {
+.content_wrapper .product_category .container .slick_container .item.slick-slide a p {
+    font-family: 'Roboto';
+    font-size: 14px;
+    padding-left: 0.4em;
+    margin-bottom: 0;
+}
+
+.content_wrapper .product_category .container .slick_container .item.slick-slide a span {
+    font-family: 'Zilla Slab', serif;
+    padding-left: 0.4em;
+    font-size: 13px;
+    font-weight: 600;
+    margin-bottom: 0.5em;
+}
+
+.content_wrapper .product_category .container .slick_container .item.slick-slide:not(.slick-active.slick-center) a:hover {
     transform: scale(1.0);
-    color: #0322485e;
+    color: #e80303;
 }
 
-.content_wrapper .product_category .container .row .slick_container .item.slick-slide.slick-active.slick-center {
+.content_wrapper .product_category .container .slick_container .item.slick-slide.slick-active.slick-center {
     transform: scale(1.1);
+    color: #a30000;
+}
+
+.content_wrapper .product_category .container .slick_container .item.slick-slide.slick-active.slick-center a span {
+    color: goldenrod;
+}
+
+.container .adidas {
+    width: 100%;
 }
 
 @media screen and (max-width:1024px) {
@@ -440,6 +462,18 @@
         width: 100%;
         bottom: 23em;
     }
+    .content_wrapper .about_section figure img {
+        height: 18em;
+    }
+    .content_wrapper .about_section .about_box h3,
+    .content_wrapper .about_section .about_box span {
+        font-size: 2em
+    }
+    .content_wrapper .about_section .about_box p {
+        margin-top: 0.5em;
+        line-height: 1.5em;
+        font-size: 14px;
+    }
 }
 
 @media screen and (max-width:425px) {
@@ -456,24 +490,13 @@
     .content_wrapper .carousel-section.owl-carousel .item .carousel-caption p:nth-child(3) {
         font-size: 20px;
     }
-}
-
-
-}
-font-size: 20px;
-
-}
-font-size: 20px;
-
-}
-
-}
-font-size: 20px;
-
-}
-
-}
-
-}
-
+    .content_wrapper .about_section {
+        padding: 0em 4em;
+    }
+    .content_wrapper .about_section figure img {
+        height: 100%;
+    }
+    .content_wrapper .product_category .category_body .container .content .tab-content .tab-pane a {
+        width: 100%;
+    }
 }
